name:                degu
version:             0.1.0.0
synopsis:            Interactive Programming Environment
-- description:         
homepage:            http://code.atnnn.com/project/degu
license:             BSD3
license-file:        LICENSE
author:              Etienne Laurin
maintainer:          Etienne Laurin <etienne@atnnn.com>
-- copyright:           
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable degu
  main-is:             Main.hs
  other-modules:       Degu.Font
  build-depends:       base,
                       array,
                       OpenGL,
                       GLUT,
                       freetype2,
                       mtl
  extensions:          RecordWildCards,
                       NamedFieldPuns,
                       RankNTypes,
                       GADTs,
                       DeriveDataTypeable,
                       DataKinds,
                       KindSignatures,
                       TypeFamilies,
                       GeneralizedNewtypeDeriving,
                       EmptyDataDecls